--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 theme: jekyll-theme-cayman
 title: WSCUC Leadership Academy 2023-2024
+    ```yml
+    remote_theme: pages-themes/cayman@v0.2.0
+    plugins:
+    - jekyll-remote-theme # add this line to the plugins list if you already have one
+    ```
